[tool.poetry]
name = "mdb_shop"
version = "0.1.0"
description = ""
authors = ["Alex Hub <hub.sasha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.7"
mypy = "^0.950"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
